src/yini_test/cases/golden/strict/valid/document-terminator/required-end-marker.strict.yini
@yini strict

^ Document
name = "strict-required-end-marker"
status = "complete"

/END
