src/yini_test/cases/golden/strict/invalid/syntax/unexpected-token.strict.yini
@yini strict

^ Syntax
name = "before unexpected token"
!

/END
